Added test data creation with role-assignment service, Added ccd integration on functional test, minor clean up and tidy up